<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".Fuel_Entry">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/fuel_data_entry"
        android:textColor="@color/fontcolor"
        android:paddingBottom="10dp"
        android:textSize="50sp"
        android:fontFamily="cursive"/>

    <EditText
        android:id="@+id/volume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:background="@drawable/shapeemail"
        android:drawablePadding="10dp"
        android:hint="@string/volume"
        android:textColor="@color/fontcolor"
        android:textColorHint="@color/fontcolor"
        android:textColorHighlight="@color/fontcolor"/>


    <EditText
        android:id="@+id/rupeesPerLitre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:background="@drawable/shapeemail"
        android:drawablePadding="10dp"
        android:hint="@string/rupeesperlitre"
        android:textColor="@color/fontcolor"
        android:textColorHint="@color/fontcolor"
        android:textColorHighlight="@color/fontcolor"/>

    <EditText
        android:id="@+id/previousOdometerReading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:background="@drawable/shapeemail"
        android:drawablePadding="10dp"
        android:hint="previousOdometerReading"
        android:textColor="@color/fontcolor"
        android:textColorHint="@color/fontcolor"
        android:textColorHighlight="@color/fontcolor"/>

    <EditText
        android:id="@+id/currentOdometerReading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:background="@drawable/shapeemail"
        android:drawablePadding="10dp"
        android:hint="@string/currentodometerreading"
        android:textColor="@color/fontcolor"
        android:textColorHint="@color/fontcolor"
        android:textColorHighlight="@color/fontcolor"/>

    <Button
        android:id="@+id/btnreg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_entry"
        android:shadowColor="@android:color/transparent"
        android:padding="15dp"
        android:onClick="addentry"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/shapelogin"/>


</LinearLayout>